--- a/App/src/App.css
+++ b/App/src/App.css
@@ -65,6 +65,7 @@
 }
 
 .landing-container{
+  height: 100vh;
   padding: 10% 10% 3% 10%;
   background-color: #EFEFEF;
   display: flex;
@@ -113,6 +114,7 @@
 }
 
 .mainpage-container{
+  height: 100vh;
   padding: 10% 10% 9% 10%;
   background-color: #EFEFEF;
   display: flex;
@@ -181,4 +183,142 @@
   justify-content: center;
   font-family: 'Geist-Medium';
   color: #ffffff;
+}
+
+
+.Welcome-msg {
+  padding-top: 6%;
+}
+
+.Welcome-msg h2 {
+  font-family: 'Geist-Medium';
+  color: #000000;
+  text-align: center;
+}
+
+.Welcome-msg p {
+  margin-top: 1%;
+  font-family: 'Geist-Medium';
+  color: #7b7b7b;
+  font-size: 20px;
+  text-align: center;
+}
+
+main {
+  padding: 4% 6% 31.5% 6%;
+  height: 70vh;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+}
+
+.img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin: 2px 5px;
+}
+
+.message {
+  display: flex;
+  align-items: center;
+}
+
+
+.sent {
+  flex-direction: row-reverse;
+  margin-bottom: 1%;
+}
+
+.sent p {
+  color: white;
+  background: #000000;
+  align-self: flex-end;
+}
+
+.received{
+  margin-bottom: 1%;
+}
+.received p {
+  background: #ffffff;
+  color: black;
+  font-family: "Geist-Regular";
+  font-weight: 500;
+}
+
+.sign-in {
+  color: #282c34;
+  background: white;
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+form {
+  height: 5vh;
+  position: fixed;
+  bottom: 6%;
+  width: 35%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-around;
+}
+
+form input::placeholder{
+  font-family: 'Geist-SemiBold';
+  color: #7b7b7b;
+  font-weight: 800;
+}
+
+form input{
+  background-color: #000000;
+  height: 40px;
+  width: 90%;
+  height: 40px;
+  border-radius: 8px;
+  border: none;
+  color: #FFFAEA;
+  padding-left: 1%;
+}
+
+main::-webkit-scrollbar {
+  width: 5px;
+}
+
+main::-webkit-scrollbar-track {
+  background: #1e1e24;
+}
+
+main::-webkit-scrollbar-thumb {
+  background: #DF5333;
+  border-radius: 12px;  
+}
+
+form{
+  margin-left: 34vw;
+}
+form button {
+  width: 45px;
+  height: 45px;
+  border-radius: 50px;
+  border: none;
+  background-color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+ul{
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  text-align: left;
+  margin-bottom: 3px;
+}
+
+.App{
+  background-color: #EFEFEF;
+  width: 100%;
 }
